--- a/shop_app/templates/main2.html
+++ b/shop_app/templates/main2.html
@@ -17,37 +17,56 @@
     </header>
 
     <main>
+    <center>
         <h2>Каталог</h2>
-        <div style="background-color: #e7e7e7ff; border: 1px solid black; padding: 10px; margin: 10px; display: inline-block;">
-            <a href="sofas.html" style="text-decoration: none; color: black;">
-                <img src="image/диваны.png" alt="Диваны" width="200">
-                <h3>Диваны</h3>
-            </a>
-        </div>
-        <div style="background-color: #e7e7e7ff; border: 1px solid black; padding: 10px; margin: 10px; display: inline-block;">
-            <a href="beds.html" style="text-decoration: none; color: black;">
-                <img src="image/кровати.png" alt="Кровати" width="200">
-                <h3>Кровати</h3>
-            </a>
-        </div>
-        <div style="background-color: #e7e7e7ff; border: 1px solid black; padding: 10px; margin: 10px; display: inline-block;">
-            <a href="armchair.html" style="text-decoration: none; color: black;">
-                <img src="image/кресла.png" alt="Кресла" width="200">
-                <h3>Кресла</h3>
-            </a>
-        </div>
-        <div style="background-color: #e7e7e7ff; border: 1px solid black; padding: 10px; margin: 10px; display: inline-block;">
-            <a href="chairs.html" style="text-decoration: none; color: black;">
-                <img src="image/стулья.png" alt="Стулья" width="200">
-                <h3>Стулья</h3>
-            </a>
-        </div>
-        <div style="background-color: #e7e7e7ff; border: 1px solid black; padding: 10px; margin: 10px; display: inline-block;">
-            <a href="tables.html" style="text-decoration: none; color: black;">
-                <img src="image/столы.png" alt="Столы" width="200">
-                <h3>Столы</h3>
-            </a>
-        </div>
-    </main>
+        <table>
+            <tr>
+                <td>
+                    <div style="background-color: #e7e7e7ff; border-radius: 10px 10px 0 0; padding: 10px; margin: 10px; display: inline-block;">
+                        <a href="sofas.html" style="text-decoration: none; color: black;">
+                            <img src="image/диваны.png" alt="Диваны" width="200">
+                            <h3>Диваны</h3>
+                        </a>
+                    </div>
+                </td>
+                <td>
+                    <div style="background-color: #e7e7e7ff; border-radius: 10px 10px 0 0; padding: 10px; margin: 10px; display: inline-block;">
+                        <a href="beds.html" style="text-decoration: none; color: black;">
+                            <img src="image/кровати.png" alt="Кровати" width="200">
+                            <h3>Кровати</h3>
+                        </a>
+                    </div>
+                </td>
+                <td>
+                    <div style="background-color: #e7e7e7ff; border-radius: 10px 10px 0 0; padding: 10px; margin: 10px; display: inline-block;">
+                        <a href="armchair.html" style="text-decoration: none; color: black;">
+                            <img src="image/кресла.png" alt="Кресла" width="200">
+                            <h3>Кресла</h3>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div style="background-color: #e7e7e7ff; border-radius: 10px 10px 0 0; padding: 10px; margin: 10px; display: inline-block;">
+                        <a href="chairs.html" style="text-decoration: none; color: black;">
+                            <img src="image/стулья.png" alt="Стулья" width="200">
+                            <h3>Стулья</h3>
+                        </a>
+                    </div>
+                </td>
+                <td>
+                    <div style="background-color: #e7e7e7ff; border-radius: 10px 10px 0 0; padding: 10px; margin: 10px; display: inline-block;">
+                        <a href="tables.html" style="text-decoration: none; color: black;">
+                            <img src="image/столы.png" alt="Столы" width="200">
+                            <h3>Столы</h3>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </center>
+</main>
+
 </body>
 </html>
